# FortiTennis-Training

./: Cargo.toml  PHASE_4C_COMPLETE.md  PHASE_5_SUMMARY.md  debug_coach.diff  main_coach_data_error.diff
.serena/: project.yml
data/: tennis.db
docs/: DESIGN.md  IMPLEMENTATION_NOTES_4B.md  PHASE_4A_COMPLETE.md  PHASE_4B_COMPLETE.md  PHASE_4B_PLUS_ENHANCEMENTS.md  PHASE_4_ROADMAP.md  PHASE_5_IMPLEMENTATION_GUIDE.md  PHASE_5_ROADMAP.md  PHASE_5_VISUAL_GUIDE.md  PROJECT_STATUS.md  SESSION_MANAGEMENT_COMPLETE.md  TESTS.md
migrations/: 2026-01-29-000001_create_training_templates.sql
src/: lib.rs  main.rs
src/auth/: mod.rs  user.rs
src/db/: connection.rs  migrations.rs  mod.rs
src/db/repositories/: mod.rs  session_repo.rs  session_training_link_repo.rs  subscription_repo.rs  training_content_repo.rs  training_template_repo.rs
src/models/: mod.rs  session.rs  session_with_subscription.rs  training_template.rs  user.rs
src/ui/: app_ui.rs  help.rs  mod.rs  navigation.rs  session_edit_form.rs  session_filter.rs  session_form.rs  text_editor.rs  training_content_form.rs
src/utils/: error.rs
tests/integration/: mod.rs  test_subscriptions.rs
tests/unit/: auth.rs  db_connection.rs  db_migrations.rs  errors.rs  mod.rs  models.rs  session_edit_form.rs  session_form.rs  sessions.rs  text_editor.rs
tests/unit/cursor_memory/: mod.rs
tests/unit/templates/: mod.rs
